tests/lang/parse-fail-dup-attrs-1.err.exp
error: attribute 'x' already defined at «stdin»:1:3

       at «stdin»:3:3:

            2|   y = 456;
            3|   x = 789;
             |   ^
